src/objects/Partner_Commission_Summary__c.object
<CustomObject>
    <description>Roles up all customer payments to a reselling partner and calculates the earned commission</description>
    <fields>
        <fullName>Closed__c</fullName>
        <description>BAP-3698 - Partner Commissions v2</description>
        <formula>RecordType.Name = &apos;Closed&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is this summary closed</inlineHelpText>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commissionable_Revenue__c</fullName>
        <description>For BAP-3698 - Partner Commission v2</description>
        <inlineHelpText>Net transactions that can be used to pay out commissions</inlineHelpText>
        <label>Commissionable Revenue</label>
        <summarizedField>Partner_Commission_Invoice_Transaction__c.Accrued_Transaction_Amount__c</summarizedField>
        <summaryForeignKey>Partner_Commission_Invoice_Transaction__c.Partner_Commission_Summary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>For BAP-3698 - Partner Commissions v2</description>
        <inlineHelpText>The latest payment date that can be used to collect payment data for this partner</inlineHelpText>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Commission_Payment_Date__c</fullName>
        <description>BAP-3698 - Partner Commissions v2</description>
        <formula>IF(MONTH(End_Date__c) = 12,
   DATE(YEAR(End_Date__c) + 1, 1, 15),
   DATE(YEAR(End_Date__c), MONTH(End_Date__c) + 1, 15)
)</formula>
        <inlineHelpText>The expected payment date for this summary</inlineHelpText>
        <label>Expected Commission Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Invoice_Transactions__c</fullName>
        <description>For BAP-3698 - Partner Commissions v2</description>
        <inlineHelpText>The total count of invoice transactions associated with this summary</inlineHelpText>
        <label>Number of Invoice Transactions</label>
        <summaryForeignKey>Partner_Commission_Invoice_Transaction__c.Partner_Commission_Summary__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Partner_Account_External_ID__c</fullName>
        <description>For BAP-3698 - Partner Commissions v2</description>
        <formula>Partner_Account__r.rvpe__ExtAccountId__c</formula>
        <inlineHelpText>The unique external id of the partner account</inlineHelpText>
        <label>Partner Account External ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <description>For BAP-3698 - Partner Commissions v2</description>
        <inlineHelpText>The Partner Account (RV Account) that this Partner Commission is tied to.</inlineHelpText>
        <label>Partner Account</label>
        <referenceTo>rvpe__RVAccount__c</referenceTo>
        <relationshipLabel>Partner Commission Summaries</relationshipLabel>
        <relationshipName>Partner_Commission_Summaries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Partner_Commission_Earned__c</fullName>
        <description>For BAP-3698 - Partner Commission v2</description>
        <inlineHelpText>Total commissions earned in this summary</inlineHelpText>
        <label>Partner Commission Earned</label>
        <summarizedField>Partner_Commission_Invoice_Transaction__c.Partner_Commission_Earned__c</summarizedField>
        <summaryForeignKey>Partner_Commission_Invoice_Transaction__c.Partner_Commission_Summary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Partner_Commission_Summary_Dedupe_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <inlineHelpText>A unique key that prevents duplicate summaries for the same scope and partner to be created</inlineHelpText>
        <label>Partner Commission Summary Dedupe Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>For BAP-3698 - Partner Commissions v2</description>
        <inlineHelpText>The earliest customer payment date to include when calculating this partner&apos;s commissions</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Partner Commission Summary</label>
    <nameField>
        <displayFormat>PC-{00000}</displayFormat>
        <label>Partner Commission Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Commission Summaries</pluralLabel>
    <recordTypes>
        <fullName>Closed</fullName>
        <active>true</active>
        <description>For partner commissions that have been marked as being paid</description>
        <label>Closed</label>
    </recordTypes>
    <recordTypes>
        <fullName>Open</fullName>
        <active>true</active>
        <description>This partner commission summary has not yet been closed out</description>
        <label>Open</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>